Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112491

examples/widgets/mainwindows/mainwindow crashes

    XMLWordPrintable

Details

    • Linux/X11
    • b26cdbd87 (dev), faec93775 (dev), a37a04904 (6.5), 22b892e7d (6.5), 46aa713c3 (dev), ccfb6cb7b (6.5), 22dc39a8d (6.6), 82005725c (6.6), 850e92684 (6.6)

    Description

      • Qt version is dev-20230314 with git SHA1: 8b12598b.
      • Cross-compile to target aarch64
      • Mess around for a few minutes docking and undocking widgets until the crash happens.
        $ gdb ./mainwindow 
        [...]
        Reading symbols from ./mainwindow...
        (gdb) r
        Starting program: /home/builder/dest/qt6-aarch64-dev-20230314-8b12598b/examples/widgets/mainwindows/mainwindow/mainwindow 
        [Thread debugging using libthread_db enabled]
        Using host libthread_db library "/lib/aarch64-linux-gnu/libthread_db.so.1".
        [New Thread 0x7ff375d0c0 (LWP 30048)]
        [New Thread 0x7ff2bfc0c0 (LWP 30049)]
        [New Thread 0x7ff1f090c0 (LWP 30050)]
        [New Thread 0x7ff17080c0 (LWP 30051)]
        [New Thread 0x7ff0f070c0 (LWP 30052)]
        [New Thread 0x7fe3fff0c0 (LWP 30053)]
        
        Thread 1 "mainwindow" received signal SIGSEGV, Segmentation fault.
        0x0000007ff7c99a18 in QDockAreaLayoutInfo::info (this=0x55558e7060, widget=
            0x7fe400c820)
            at /home/builder/qt5-git/qtbase/src/widgets/widgets/qdockarealayout.cpp:1237
        1237            if (item.widgetItem != nullptr && item.widgetItem->widget() == widget)
        (gdb) bt
        #0  0x0000007ff7c99a18 in QDockAreaLayoutInfo::info (this=0x55558e7060, 
            widget=0x7fe400c820)
            at /home/builder/qt5-git/qtbase/src/widgets/widgets/qdockarealayout.cpp:1237
        #1  0x0000007ff7cdf69c in QMainWindowLayout::dockInfo (
            this=this@entry=0x5555627e70, widget=0x7fe400c820)
            at /home/builder/qt5-git/qtbase/src/widgets/widgets/qmainwindowlayout.cpp:1870
        #2  0x0000007ff7ce331c in QMainWindowLayout::unplug (this=0x5555627e70, 
            widget=0x5555740110, group=true)
            at /home/builder/qt5-git/qtbase/src/widgets/widgets/qmainwindowlayout.cpp:2534
        #3  0x0000007ff7ca9ec4 in QDockWidgetPrivate::startDrag (
            this=this@entry=0x55556537b0, group=true)
            at /home/builder/qt5-git/qtbase/src/widgets/widgets/qdockwidget.cpp:781
        #4  0x0000007ff7caa898 in QDockWidgetPrivate::mouseMoveEvent (
            this=this@entry=0x55556537b0, event=event@entry=0x7fffffe750)
            at /home/builder/qt5-git/qtbase/src/widgets/widgets/qdockwidget.cpp:977
        #5  0x0000007ff7cac0c0 in QDockWidget::event (this=0x5555740110, event=
            0x7fffffe750)
            at /home/builder/qt5-git/qtbase/src/widgets/widgets/qdockwidget.cpp:1609
        #6  0x0000007ff7b5c918 in QApplicationPrivate::notify_helper (
            this=<optimized out>, this@entry=0x55555c41b0, receiver=receiver@entry=
            0x5555740110, e=0x7fffffe750) at /home/builder/qt5-git/qtbase/src/widgets/kernel/qapplication.cpp:3284
        #7  0x0000007ff7b5ea68 in QApplication::notify (this=<optimized out>, receiver=0x5555740110, e=0x7fffffe750) at /home/builder/qt5-git/qtbase/src/widgets/kernel/qapplication.cpp:2772
        #8  0x0000007ff6c457e0 in QCoreApplication::notifyInternal2 (receiver=0x5555740110, event=0x7fffffe750) at /home/builder/qt5-git/qtbase/src/corelib/kernel/qcoreapplication.cpp:1087
        #9  0x0000007ff6c46314 in QCoreApplication::sendSpontaneousEvent (receiver=0x55557d3980, event=0x7fe400c820) at /home/builder/qt5-git/qtbase/src/corelib/kernel/qcoreapplication.cpp:1519
        #10 0x0000007ff7b5ce30 in QApplicationPrivate::sendMouseEvent (receiver=0x5555740110, event=0x7fffffe750, alienWidget=0x0, nativeWidget=0x7fe400c820, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=false, onlyDispatchEnterLeave=false) at /home/builder/qt5-git/qtbase/src/widgets/kernel/qapplication.cpp:2356
        #11 0x0000007ff7bc246c in QWidgetWindow::handleMouseEvent (this=this@entry=0x7fe40083d0, event=event@entry=0x7fffffeb70) at /home/builder/qt5-git/qtbase/src/widgets/kernel/qwidgetwindow.cpp:627
        #12 0x0000007ff7bc15ac in QWidgetWindow::event (this=0x7fe40083d0, event=0x7fffffeb70) at /home/builder/qt5-git/qtbase/src/widgets/kernel/qwidgetwindow.cpp:241
        #13 0x0000007ff7b5c918 in QApplicationPrivate::notify_helper (this=<optimized out>, this@entry=0x55555c41b0, receiver=receiver@entry=0x7fe40083d0, e=e@entry=0x7fffffeb70) at /home/builder/qt5-git/qtbase/src/widgets/kernel/qapplication.cpp:3284
        #14 0x0000007ff7b5da04 in QApplication::notify (this=0x7fffffef50, receiver=0x7fe40083d0, e=0x7fffffeb70) at /home/builder/qt5-git/qtbase/src/widgets/kernel/qapplication.cpp:3235
        #15 0x0000007ff6c457e0 in QCoreApplication::notifyInternal2 (receiver=0x7fe40083d0, event=0x7fffffeb70) at /home/builder/qt5-git/qtbase/src/corelib/kernel/qcoreapplication.cpp:1087
        #16 0x0000007ff6c46314 in QCoreApplication::sendSpontaneousEvent (receiver=0x55557d3980, event=0x7fe400c820) at /home/builder/qt5-git/qtbase/src/corelib/kernel/qcoreapplication.cpp:1519
        #17 0x0000007ff7315304 in QGuiApplicationPrivate::processMouseEvent (e=e@entry=0x55559acdb0) at /home/builder/qt5-git/qtbase/src/gui/kernel/qguiapplication.cpp:2280
        #18 0x0000007ff7314a28 in QGuiApplicationPrivate::processWindowSystemEvent (e=0x55559acdb0) at /home/builder/qt5-git/qtbase/src/gui/kernel/qguiapplication.cpp:2026
        #19 0x0000007ff7373bd4 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at /home/builder/qt5-git/qtbase/src/gui/kernel/qwindowsysteminterface.cpp:1100
        #20 0x0000007ff3becb28 in QXcbUnixEventDispatcher::processEvents (this=<optimized out>, flags=...) at /home/builder/qt5-git/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:27
        #21 0x0000007ff6c50988 in QEventLoop::processEvents (this=0x7fffffee50, flags=...) at /home/builder/qt5-git/qtbase/src/corelib/kernel/qeventloop.cpp:100
        #22 QEventLoop::exec (this=0x7fffffee50, flags=...) at /home/builder/qt5-git/qtbase/src/corelib/kernel/qeventloop.cpp:182
        #23 0x0000007ff6c45fdc in QCoreApplication::exec () at /home/builder/qt5-git/qtbase/src/corelib/kernel/qcoreapplication.cpp:1408
        #24 0x0000007ff73142ec in QGuiApplication::exec () at /home/builder/qt5-git/qtbase/src/gui/kernel/qguiapplication.cpp:1886
        #25 0x0000007ff7b5d7e4 in QApplication::exec () at /home/builder/qt5-git/qtbase/src/widgets/kernel/qapplication.cpp:2564
        #26 0x00000055555695a0 in main (argc=1, argv=<optimized out>) at /home/builder/qt5-git/qtbase/examples/widgets/mainwindows/mainwindow/main.cpp:146
        
        (gdb) print item.widgetItem
        $4 = (QLayoutItem *) 0x55557d3980
        (gdb) print *item.widgetItem
        $5 = {_vptr$QLayoutItem = 0x800000060, align = {i = 0}}
        (gdb) print item.widgetItem->widget()
        Cannot access memory at address 0x8000000c8
        

      Thanks vestbo and manordheim for the help!

      Attachments

        1. axel_bug.txt
          87 kB
        2. axel_bug-2.txt
          84 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              axelspoerl Axel Spoerl
              jimis Dimitrios Apostolou
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: